Found a way to move multiple files!